fixed vertically align the icon of guest moderator , delete moderator icons to the center , hide guest moderator code , new button with info and after clicked 3 sec visiable

--- a/src/app/components/shared/_dialogs/moderators/moderators.component.scss
+++ b/src/app/components/shared/_dialogs/moderators/moderators.component.scss
@@ -17,7 +17,7 @@
 }
 
 .moderator-loginId {
-  margin-left: 32px;
+  margin-left: 30px;
   margin-top: 4px;
   font-size: 12px;
 }
